# rust-wasi-hello

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.devcontainer/docker/: Dockerfile  devcontainer.json
.devcontainer/scripts/: devcontainer.json
.github/workflows/: publish-devcontainer.yml  publish.yml  test.yml
scripts/: build.sh  install.sh  publish.sh
src/: bindings.rs  lib.rs
wit/: world.wit
