[package]
name = "rust-wasi-hello"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:rust-wasi-hello"
# This tells cargo-component to use a special adapter, which doesn't depend on
# `get-environment` or other things not present in the proxy world.
proxy = true

[dependencies]
wasi = "0.13.2"
wit-bindgen-rt = { version = "0.30.0", features = ["bitflags"] }
